Partenaire Lycée Inter

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -9,6 +9,7 @@
     partners_manav: Thank you to Manav Sadhna who through the practice of the Ghandiji’s teachings has for the past 20 years helped the marginalized communities slowly recover and emancipate theirselves from their poverty. They are getting ready to host our clinic
     partners_visiologiste: Le Visiologiste is a French foundation who helped train us for our trip
     partners_mxophtalmic: MX Ophtalmic bought our auto-refractor for the cheapest price on the market
+    partners_lycer_inter: The American section of the International School of Saint-Germain en Laye participated activately to spark the association with a 1.500 € donation. They also maintained the exchange with the MGIS.
 
 
     presentation: Kassiopé is a non-lucrative association aimed at offering free eye care to the most disabled. It was created in June of 2015 by a group of six french students, all of whom study at the Lycée International of Saint Germain en Laye.
