--- a/locales/en.yml
+++ b/locales/en.yml
@@ -10,6 +10,35 @@
     partners_visiologiste: Le Visiologiste is a French foundation who helped train us for our trip
     partners_mxophtalmic: MX Ophtalmic bought our auto-refractor for the cheapest price on the market
     partners_lycer_inter: The American section of the International School of Saint-Germain en Laye participated activately to spark the association with a 1.500 € donation. They also maintained the exchange with the MGIS.
+    american_section: The American Section
+For inspiring the project through the MGIS/American Section exchange program.
+For launching our project with a 1500€ Global Citizen Award.
+
+Manav Sadhna:
+For hosting our project in Ahmadabad and helping with coordination.
+For maintaining our project on a long-term basis.
+
+MXOphtalmic:
+For donating glasses for the clinic.
+For donating an autorefractometer.
+
+Le Visiologiste:
+For training us on eye exams.
+
+The Ahmedabad Eye Laser Hospital:
+For their support and supervision of our clinic in Ahmedabad.
+
+Brian Ball:
+For helping us launch the project
+
+Dr.Prema from the Lotus Eye Clinic:
+For her advice and support for our project.
+
+For our parents unending help and support.
+
+For all those who donated and gave their time to this project!
+
+We can not make it without you!
 
 
     presentation: Kassiopé is a non-lucrative association aimed at offering free eye care to the most disabled. It was created in June of 2015 by a group of six french students, all of whom study at the Lycée International of Saint Germain en Laye.
